# shader-tool

./: .gitignore  CMakeLists.txt  README.md
assets/examples/: box-scene.scm  scene.scm
assets/examples/blinn-phong-box/: scene.scm
assets/examples/shadow-map/: blinn-phong-with-shadow.scm  blur.scm  geometry-map.scm  scene.scm  shadow-map.scm
assets/examples/volume-cloud/: fbm.scm  perlin.scm  scene.scm  sky.scm  volume-depth.scm
assets/examples/water/: caustics.scm  environ-map.scm  height-fields.scm  hf-disturbance.scm  pool-wall.scm  scene.scm  water-surface.scm
assets/modules/: matrix.scm  rtask-def.scm  shader-def.scm  shrtool.scm  shrtool.sld  zenity-extension.scm
assets/shaders/: blinn-phong.scm  lambertian-cubemap.scm  lambertian-texture.scm  solid-color.scm
cmake/: FindChibi_Scheme.cmake  FindGLFW.cmake  FindGuile.cmake  FindReadline.cmake  Findassimp.cmake
docs/images/: structure.dia~
docs/zh-CN/: README.md  misc.md  reflection.md  scripting.md  unit-test.md
shrtool/: CMakeLists.txt
shrtool/repl/: main.cc
shrtool/src/: animation.cc  animation.h  exception.h  image.cc  image.h  matrix.h  mesh.cc  mesh.h  osdep.h  properties.h  providers.h  reflection.h  render_assets.cc  render_assets.h  render_queue.cc  render_queue.h  res_pool.h  res_trait.h  scm.cc  scm.h  shader_parser.cc  shader_parser.h  shading.cc  shading.h  stage.h  traits.h  unit_test.h  utilities.h  utils.h
shrtool/src/common/: image.h  matrix.h  mesh.h  reflection.h  utilities.h
shrtool/tests/: gui_test.h  gui_test_providers.cc  gui_test_shading.cc  test_animation.cc  test_deferred_shading.cc  test_image.cc  test_matrix.cc  test_mesh.cc  test_properties.cc  test_prov_resources.cc  test_prov_shading.cc  test_providers.cc  test_reflection.cc  test_render_queue.cc  test_res_pool.cc  test_scm.cc  test_shader_parser.cc  test_shading.cc  test_utils.cc  test_utils.h
